--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
