--- a/.gitignore
+++ b/.gitignore
@@ -2,27 +2,16 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
 
-# testing
-/coverage
+
+
 
 # next.js
-/.next/
+/.next
 /out/
 
-# production
-/build
 
-# misc
-.DS_Store
-*.pem
+
 
 # debug
 npm-debug.log*
